# ChessEngine

./: .gitignore  Bitboard.cpp  Bitboard.h  Bitboards.cpp  Bitboards.h  Board.h  Board_state.cpp  Board_state.h  CMakeLists.txt  Constants.h  Engine.cpp  Engine.h  FEN.cpp  FEN.h  Legal_move_generator.cpp  Legal_move_generator.h  Makefile  Move.h  Move_generator.cpp  Move_generator.h  Pieces.h  Position.h  README.md  Square.h  generate_magics.cmake  main.cpp
.devcontainer/: Dockerfile
.github/workflows/: openbench.yml
src/: Bitboard.cpp  Bitboard.h  Bitboard.tests.cpp  Board.cpp  Board.h  Chess_data.h  Constants.h  Engine.cpp  Engine.h  Engine_impl.h  Enum_map.h  Fixed_capacity_vector.h  Magic_generation_util.h  Magic_generation_util.tests.cpp  Magic_util.h  Move.h  Move_generator.cpp  Move_generator.h  Move_generator.tests.cpp  Pieces.h  Position.h  Position.tests.cpp  State.cpp  State.h  State.tests.cpp  Stdio.h  Time_manager.cpp  Time_manager.h  Transposition_table.cpp  Transposition_table.h  Transposition_table.tests.cpp  Uci_handler.cpp  Uci_handler.h  Uci_handler_impl.h  Utility.h  bench.h  magic_main.cpp  magic_squares.h  main.cpp  mdspan.h  (+7 more)
src/nnue/: Accumulator.h  NNUE_header.cpp  NNUE_header.h  Neural_network.cpp  Neural_network.h  common.h
src/nnue/layers/: Dense_linear_layer.h  Dense_linear_layer_impl.h  Feature_transformer.cpp  Feature_transformer.h  aligned_allocator.h
utils/: perft  perft_main.cpp
